--- a/common/build.gradle
+++ b/common/build.gradle
@@ -12,7 +12,7 @@ repositories {
 }
 
 dependencies {
-    compile 'org.codehaus.groovy:groovy-all:2.3.11'
+    testCompile 'org.codehaus.groovy:groovy-all:2.3.11'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
@@ -24,7 +24,7 @@ uploadArchives {
     repositories {
         mavenDeployer {
             repository url: "file://${rootDir}/docs"
-            pom.version = '0.1.0'
+            pom.version = '0.1.1'
             pom.groupId = 'com.naosim.ddd.defined'
             pom.artifactId = 'common'
         }
