--- a/slang/build.gradle
+++ b/slang/build.gradle
@@ -18,24 +18,16 @@ dependencies {
     compile group: 'io.javaslang', name: 'javaslang', version: '2.0.6'
 
 
-    compile 'org.codehaus.groovy:groovy-all:2.3.11'
+    testCompile 'org.codehaus.groovy:groovy-all:2.3.11'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
-task fatJar(type: Jar) {
-    baseName = project.name + '-all'
-    from {
-        configurations.compile.findAll { it.toString().contains("common")}.collect { it.isDirectory() ? it : zipTree(it) }
-    }
-    with jar
+project.ext {
+    docsMavenConfig = [
+            version: '0.1.1',
+            groupId: 'com.naosim.ddd.defined',
+            artifactId: 'definedforslang',
+            includeJars: ['common']
+    ]
 }
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            repository url: "file://${rootDir}/docs"
-            pom.version = '0.1.0'
-            pom.groupId = 'com.naosim.ddd.defined'
-            pom.artifactId = 'definedforslang'
-        }
-    }
-}
+apply from: 'docsMavenArchive.gradle'
