--- a/vavr/build.gradle
+++ b/vavr/build.gradle
@@ -3,7 +3,6 @@ version '1.0-SNAPSHOT'
 
 apply plugin: 'groovy'
 apply plugin: 'java'
-apply plugin: 'maven'
 
 sourceCompatibility = 1.8
 
@@ -16,24 +15,16 @@ dependencies {
     // https://mvnrepository.com/artifact/io.vavr/vavr
     compile group: 'io.vavr', name: 'vavr', version: '0.9.2'
 
-    compile 'org.codehaus.groovy:groovy-all:2.3.11'
+    testCompile 'org.codehaus.groovy:groovy-all:2.3.11'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
-task fatJar(type: Jar) {
-    baseName = project.name + '-all'
-    from {
-        configurations.compile.findAll { it.toString().contains("common")}.collect { it.isDirectory() ? it : zipTree(it) }
-    }
-    with jar
+project.ext {
+    docsMavenConfig = [
+            version: '0.1.1',
+            groupId: 'com.naosim.ddd.defined',
+            artifactId: 'definedforvavr',
+            includeJars: ['common']
+    ]
 }
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            repository url: "file://${rootDir}/docs"
-            pom.version = '0.1.0'
-            pom.groupId = 'com.naosim.ddd.defined'
-            pom.artifactId = 'definedforvavr'
-        }
-    }
-}
+apply from: 'docsMavenArchive.gradle'
