--- a/slang/build.gradle
+++ b/slang/build.gradle
@@ -9,11 +9,12 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    maven { url 'https://naosim.github.io/ddd-defined/' }
 }
 
 
 dependencies {
-    compile project(':common')
+    compile group:'com.naosim.ddd.defined', name:'common', version:'0.1.2'
     // https://mvnrepository.com/artifact/io.javaslang/javaslang
     compile group: 'io.javaslang', name: 'javaslang', version: '2.0.6'
 
@@ -24,7 +25,7 @@ dependencies {
 
 project.ext {
     docsMavenConfig = [
-            version: '0.1.2',
+            version: '0.1.3',
             groupId: 'com.naosim.ddd.defined',
             artifactId: 'definedforslang',
             includeJars: ['common']
