--- a/vavr/build.gradle
+++ b/vavr/build.gradle
@@ -8,10 +8,11 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    maven { url 'https://naosim.github.io/ddd-defined/' }
 }
 
 dependencies {
-    compile project(':common')
+    compile group:'com.naosim.ddd.defined', name:'common', version:'0.1.2'
     // https://mvnrepository.com/artifact/io.vavr/vavr
     compile group: 'io.vavr', name: 'vavr', version: '0.9.2'
 
@@ -21,7 +22,7 @@ dependencies {
 
 project.ext {
     docsMavenConfig = [
-            version: '0.1.2',
+            version: '0.1.3',
             groupId: 'com.naosim.ddd.defined',
             artifactId: 'definedforvavr',
             includeJars: ['common']
