--- a/vavr/build.gradle
+++ b/vavr/build.gradle
@@ -3,6 +3,7 @@ version '1.0-SNAPSHOT'
 
 apply plugin: 'groovy'
 apply plugin: 'java'
+apply plugin: 'maven'
 
 sourceCompatibility = 1.8
 
@@ -12,7 +13,7 @@ repositories {
 }
 
 dependencies {
-    compile group:'com.naosim.ddd.defined', name:'common', version:'0.1.2'
+    compile group:'com.naosim.ddd.defined', name:'common', version:'0.1.3'
     // https://mvnrepository.com/artifact/io.vavr/vavr
     compile group: 'io.vavr', name: 'vavr', version: '0.9.2'
 
@@ -28,4 +29,15 @@ project.ext {
             includeJars: ['common']
     ]
 }
-apply from: 'docsMavenArchive.gradle'
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            repository url: "file://${rootDir}/docs"
+            pom.version = project.docsMavenConfig.version
+            pom.groupId = project.docsMavenConfig.groupId
+            pom.artifactId = project.docsMavenConfig.artifactId
+        }
+    }
+}
+
