--- a/vavr/docsMavenArchive.gradle
+++ b/vavr/docsMavenArchive.gradle
@@ -23,37 +23,37 @@
 
 apply plugin: 'maven'
 
-//// デフォルトのjarをアーティファクトから削除
-//configurations.archives.artifacts.with { archives ->
-//    def jarArtifact
-//    archives.each {
-//        if (it.file =~ 'jar') {
-//            jarArtifact = it
-//        }
-//    }
-//    println "JAR to delete: ${jarArtifact}"
-//    remove(jarArtifact)
-//}
-//
-//boolean isIncludeJar(obj) {
-//    def result = project.docsMavenConfig.includeJars.findAll { obj.toString().contains(it)}.size() > 0
-//    println("isIncludeJar: ${obj.toString()} -> ${result}")
-//    return result
-//}
-//
-//// fatJarを作成するタスク
-//task fatJar(type: Jar) {
-//    baseName = project.name + '-all'
-//    from {
-//        configurations.compile.findAll { isIncludeJar(it) }.collect { it.isDirectory() ? it : zipTree(it) }
-//    }
-//    with jar
-//}
-//
-//// fatJarをアーティファクトに登録
-//artifacts {
-//    archives fatJar
-//}
+// デフォルトのjarをアーティファクトから削除
+configurations.archives.artifacts.with { archives ->
+    def jarArtifact
+    archives.each {
+        if (it.file =~ 'jar') {
+            jarArtifact = it
+        }
+    }
+    println "JAR to delete: ${jarArtifact}"
+    remove(jarArtifact)
+}
+
+boolean isIncludeJar(obj) {
+    def result = project.docsMavenConfig.includeJars.findAll { obj.toString().contains(it)}.size() > 0
+    println("isIncludeJar: ${obj.toString()} -> ${result}")
+    return result
+}
+
+// fatJarを作成するタスク
+task fatJar(type: Jar) {
+    baseName = project.name + '-all'
+    from {
+        configurations.compile.findAll { isIncludeJar(it) }.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+    with jar
+}
+
+// fatJarをアーティファクトに登録
+artifacts {
+    archives fatJar
+}
 
 uploadArchives {
     repositories {
